--- a/styles/nynm.css
+++ b/styles/nynm.css
@@ -1,7 +1,87 @@
 /* shared CSS */
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     font-family: Work Sans;
 }
+
+main{
+    width: 75%;
+    margin: 0 auto;
+}
+
+.btn-primary{
+    padding: 21px 25px;
+    border-radius: 5px;
+    background-color: #F15B22;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    border: 0;
+}
+
+/* header */
+
+.header-content{
+    text-align: right;
+    padding: 216px 230px 165px 845px;
+    background-image: url("../images/banner/banner1.png");
+}
+
+.header-title{
+    font-size: 65px;
+    margin-bottom: 0px;
+    text-align: right;
+}
+
+.header-description{
+    color: var(--Dark-02, #444343);
+    text-align: right;
+    line-height: 26px;
+    margin-top: 24px;
+    margin-bottom: 32px;
+}
+
+
+/* first section of main */
+.section1{
+    display: flex;
+    align-items: center;
+    gap: 100px;
+    justify-content: center;
+    padding-top: 140px;
+    padding-bottom: 100px;
+}
+
+.myfailure-title{
+    font-size: 40px;
+    font-weight: 700px;
+    width: 288px;
+}
+
+.myfailure-description{
+    width: 416px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 26px;
+    margin-bottom: 16px;
+    color: var(--Dark-02, #444343);
+}
+
+.myfailure-list{
+    color: var(--Dark-02, #444343);
+    padding-left: 0px;
+}
+
+.section1 li{
+    list-style: none;
+}
+
+
 
 
